better response header menu option, fixed issue with header height overflow (well issue is a strong word, but it was annoying me)

--- a/app/assets/stylesheets/mixins/heights.scss
+++ b/app/assets/stylesheets/mixins/heights.scss
@@ -1,1 +1,2 @@
 $header-height: 50px;
+$header-content-height: 25px;
